--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="OpenCvSharp4" version="4.11.0.20250507" targetFramework="net472" />
-  <package id="OpenCvSharp4.runtime.win" version="4.11.0.20250507" targetFramework="net472" />
+  <package id="Costura.Fody" version="6.0.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Fody" version="6.9.3" targetFramework="net48" developmentDependency="true" />
+  <package id="OpenCvSharp4" version="4.11.0.20250507" targetFramework="net48" />
+  <package id="OpenCvSharp4.runtime.win" version="4.11.0.20250507" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
   <package id="System.Memory" version="4.6.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net48" />
+  <package id="Tools.InnoSetup" version="6.4.3" targetFramework="net48" />
 </packages>
